--- a/ia.ipynb
+++ b/ia.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -74,15 +74,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>38084</th>\n",
-       "      <td>ee6c9efbbd90c63c4f1a545b9332032b</td>\n",
-       "      <td>7bb2e1915001b30dda3466d6c81b2265</td>\n",
+       "      <th>55097</th>\n",
+       "      <td>cdf7511b632d2a9b53d70b1e24a45e70</td>\n",
+       "      <td>fc2f06b2af43f8be78736cd991ca8486</td>\n",
        "      <td>delivered</td>\n",
-       "      <td>2017-02-04 00:44:29</td>\n",
-       "      <td>2017-02-04 01:05:37</td>\n",
-       "      <td>2017-02-07 08:53:54</td>\n",
-       "      <td>2017-02-22 01:54:02</td>\n",
-       "      <td>2017-03-21 00:00:00</td>\n",
+       "      <td>2018-07-04 16:35:27</td>\n",
+       "      <td>2018-07-05 16:15:56</td>\n",
+       "      <td>2018-07-05 13:30:00</td>\n",
+       "      <td>2018-07-07 17:37:36</td>\n",
+       "      <td>2018-07-30 00:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -90,19 +90,19 @@
       ],
       "text/plain": [
        "                               order_id                       customer_id  \\\n",
-       "38084  ee6c9efbbd90c63c4f1a545b9332032b  7bb2e1915001b30dda3466d6c81b2265   \n",
+       "55097  cdf7511b632d2a9b53d70b1e24a45e70  fc2f06b2af43f8be78736cd991ca8486   \n",
        "\n",
        "      order_status order_purchase_timestamp    order_approved_at  \\\n",
-       "38084    delivered      2017-02-04 00:44:29  2017-02-04 01:05:37   \n",
+       "55097    delivered      2018-07-04 16:35:27  2018-07-05 16:15:56   \n",
        "\n",
        "      order_delivered_carrier_date order_delivered_customer_date  \\\n",
-       "38084          2017-02-07 08:53:54           2017-02-22 01:54:02   \n",
+       "55097          2018-07-05 13:30:00           2018-07-07 17:37:36   \n",
        "\n",
        "      order_estimated_delivery_date  \n",
-       "38084           2017-03-21 00:00:00  "
+       "55097           2018-07-30 00:00:00  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -147,26 +147,26 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9356</th>\n",
-       "      <td>fc786b631b0c7de13ab9d65b09aba88d</td>\n",
-       "      <td>d72c453cd952b79143e476ecc4a9b6ab</td>\n",
-       "      <td>13092</td>\n",
-       "      <td>campinas</td>\n",
-       "      <td>SP</td>\n",
+       "      <th>24834</th>\n",
+       "      <td>bbcf8ece3eb8126cd7e507284ede76c7</td>\n",
+       "      <td>8c628e66ad97ce2163d23d1156e19a0e</td>\n",
+       "      <td>22220</td>\n",
+       "      <td>rio de janeiro</td>\n",
+       "      <td>RJ</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           customer_id                customer_unique_id  \\\n",
-       "9356  fc786b631b0c7de13ab9d65b09aba88d  d72c453cd952b79143e476ecc4a9b6ab   \n",
+       "                            customer_id                customer_unique_id  \\\n",
+       "24834  bbcf8ece3eb8126cd7e507284ede76c7  8c628e66ad97ce2163d23d1156e19a0e   \n",
        "\n",
-       "      customer_zip_code_prefix customer_city customer_state  \n",
-       "9356                     13092      campinas             SP  "
+       "       customer_zip_code_prefix   customer_city customer_state  \n",
+       "24834                     22220  rio de janeiro             RJ  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -213,14 +213,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>78669</th>\n",
-       "      <td>b2f924dadc7d30518a67a2c8598df64e</td>\n",
+       "      <th>89251</th>\n",
+       "      <td>cab899336401fd910bf645dc446d42de</td>\n",
        "      <td>1</td>\n",
-       "      <td>02cd4165b1e6a3782def2e4e851ae884</td>\n",
-       "      <td>870d0118f7a9d85960f29ad89d5d989a</td>\n",
-       "      <td>2017-09-21 12:35:24</td>\n",
+       "      <td>33b22110fa818ff5f0c387a79f19b612</td>\n",
+       "      <td>6b243f80ed07b10f0e8aa0f21a205f3c</td>\n",
+       "      <td>2017-11-30 02:53:00</td>\n",
        "      <td>54.9</td>\n",
-       "      <td>18.0</td>\n",
+       "      <td>15.82</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -228,16 +228,16 @@
       ],
       "text/plain": [
        "                               order_id  order_item_id  \\\n",
-       "78669  b2f924dadc7d30518a67a2c8598df64e              1   \n",
+       "89251  cab899336401fd910bf645dc446d42de              1   \n",
        "\n",
        "                             product_id                         seller_id  \\\n",
-       "78669  02cd4165b1e6a3782def2e4e851ae884  870d0118f7a9d85960f29ad89d5d989a   \n",
+       "89251  33b22110fa818ff5f0c387a79f19b612  6b243f80ed07b10f0e8aa0f21a205f3c   \n",
        "\n",
        "       shipping_limit_date  price  freight_value  \n",
-       "78669  2017-09-21 12:35:24   54.9           18.0  "
+       "89251  2017-11-30 02:53:00   54.9          15.82  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,11 +287,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for the customers csv, only using the customer_city/state field - removing rows with null values for these fields\n",
+    "# for the customers csv, only using the customer_state field - removing rows with null values for this field\n",
     "customers = customers.dropna(subset=['customer_state'])"
    ]
   },
@@ -304,12 +304,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for the order_items csv, only using the shipping_limit_date and freight_value fields - removing rows with null values for these fields\n",
-    "order_items = order_items.dropna(subset=['shipping_limit_date', 'freight_value'])"
+    "# for the order_items csv, only using the freight_value field - removing rows with null values for this field\n",
+    "order_items = order_items.dropna(subset=['freight_value'])"
    ]
   },
   {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -387,15 +387,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>71997</th>\n",
-       "      <td>2018-05-22 18:45:21</td>\n",
-       "      <td>2018-06-27</td>\n",
-       "      <td>2018-06-08 23:03:19</td>\n",
-       "      <td>RJ</td>\n",
-       "      <td>137.9</td>\n",
-       "      <td>15.85</td>\n",
-       "      <td>35</td>\n",
-       "      <td>5</td>\n",
+       "      <th>34537</th>\n",
+       "      <td>2018-04-21 14:30:01</td>\n",
+       "      <td>2018-05-15</td>\n",
+       "      <td>2018-04-27 22:23:41</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>25.02</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -404,16 +404,16 @@
       ],
       "text/plain": [
        "      order_purchase_timestamp order_estimated_delivery_date  \\\n",
-       "71997      2018-05-22 18:45:21                    2018-06-27   \n",
+       "34537      2018-04-21 14:30:01                    2018-05-15   \n",
        "\n",
        "      order_delivered_customer_date customer_state  order_price  \\\n",
-       "71997           2018-06-08 23:03:19             RJ        137.9   \n",
+       "34537           2018-04-27 22:23:41             SP        195.0   \n",
        "\n",
        "       freight_value  estimated_delivery_days  purchase_month  delay  \n",
-       "71997          15.85                       35               5  False  "
+       "34537          25.02                       23               4  False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "4                       12               2  False  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -647,21 +647,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21655    -7\n",
-       "59689   -11\n",
-       "83936   -15\n",
-       "54325   -11\n",
-       "3270    -14\n",
+       "36444    -8\n",
+       "55699    -7\n",
+       "11024   -18\n",
+       "36791    -4\n",
+       "57461    -9\n",
        "Name: delay_in_days, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
