--- a/ia.ipynb
+++ b/ia.ipynb
@@ -7,8 +7,13 @@
     "Lucas Auada Braga\n",
     "Vitor Kenzo Koga Onoue\n",
     "\n",
-    "4/5 - Vitor Onoue - Início preparação dos dados\n",
-    "4/6 - Vitor Onoue - Preparação finalizada + EDA"
+    "4/5 - Vitor Onoue - Starting data preparation\n",
+    "\n",
+    "4/6 - Vitor Onoue - Finished data preparation + EDA\n",
+    "\n",
+    "5/31 - Lucas Braga - Second notebook containing model training steps\n",
+    "\n",
+    "5/31 - Vitor Onoue - Merging both notebooks + adding comments"
    ]
   },
   {
@@ -726,6 +731,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model training steps:\n",
+    "\n",
+    "+ select the feature columns and the target column\n",
+    "+ split training and testing data\n",
+    "+ choose the algorithm and train the model\n",
+    "+ print and analyze the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -764,11 +781,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training with logistic regression - the amount of falses requires class balance\n",
+    "# training with logistic regression - the low amount of falses requires class balance\n",
     "lr = LogisticRegression(max_iter=1000, class_weight='balanced')\n",
     "lr.fit(x_train_scaled, y_train)\n",
     "y_pred_lr = lr.predict(x_test_scaled)"
@@ -808,11 +825,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training with random forest - the amount of falses requires class balance\n",
+    "# training with random forest - the low amount of falses requires class balance\n",
     "rf = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
     "rf.fit(x_train, y_train)\n",
     "y_pred_rf = rf.predict(x_test)"
